krator/tests/ui/state/require_transition_to.stderr
error[E0277]: the trait bound `TestState: TransitionTo<_>` is not satisfied
  --> $DIR/require_transition_to.rs:38:9
   |
38 |         Transition::next(self, TestState)
   |         ^^^^^^^^^^^^^^^^ the trait `TransitionTo<_>` is not implemented for `TestState`
   |
   = note: required by `Transition::<S>::next`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
